--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" type="image/x-icon" href="/Blender.png"/>
   <title>Team Blender</title>
+  <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
   <div id="app"></div>
